<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E80D0D"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewMainMyTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_tasks"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToAddFormButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_task"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/goToAllTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/goToAllTaskButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goToAllTaskButton" />

    <Button
        android:id="@+id/goToAllTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0057"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goToAddFormButton"
        app:layout_constraintTop_toBottomOf="@+id/goToTaskButtonThree" />

    <Button
        android:id="@+id/goToTaskButtonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task2"
        app:layout_constraintBottom_toTopOf="@+id/goToTaskButtonThree"
        app:layout_constraintStart_toStartOf="@+id/goToTaskButtonThree"
        app:layout_constraintTop_toBottomOf="@+id/goToTaskButtonOne" />

    <Button
        android:id="@+id/goToTaskButtonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/task3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToTaskButtonTwo" />

    <Button
        android:id="@+id/goToTaskButtonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/goToTaskButtonTwo"
        app:layout_constraintStart_toStartOf="@+id/goToTaskButtonTwo"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainMyTaskTitle" />

    <Button
        android:id="@+id/goToSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3574E1"
        android:text="@string/setting"
        android:textColor="#4300FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/goToAllTaskButton"
        app:layout_constraintStart_toStartOf="@+id/goToAddFormButton"
        app:layout_constraintTop_toBottomOf="@+id/goToAllTaskButton" />

    <Button
        android:id="@+id/recycleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/goToSettingsButton"
        app:layout_constraintEnd_toEndOf="@+id/goToAllTaskButton"
        app:layout_constraintStart_toStartOf="@+id/goToAddFormButton"
        app:layout_constraintTop_toBottomOf="@+id/goToTaskButtonThree" />

</androidx.constraintlayout.widget.ConstraintLayout>