<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">

    <TextView
        android:id="@+id/textTitleOnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBelowSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textTitleOnSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textTitleOnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/textTitleOnSignUp"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/editTextSignUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="12"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextSignUpEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signUpInfromationButton"
        app:layout_constraintStart_toStartOf="@+id/signUpInfromationButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpPassword" />

    <Button
        android:id="@+id/signUpInfromationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpEmailAddress" />

    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordText"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>