<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetail">

    <TextView
        android:id="@+id/textViewTaskDetailPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/task_title"
        android:textAlignment="center"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTaskDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/textViewTaskDetailDescription"
        android:layout_width="380dp"
        android:layout_height="312dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/sampleText"
        android:textSize="20sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTaskDetail"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewTaskDetail"
        android:layout_width="184dp"
        android:layout_height="170dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

</androidx.constraintlayout.widget.ConstraintLayout>